--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
     <div class="wrapper center-align small-text">
         <hr/>
         <p> Cloudflare Protection: <span style="color: #00ff00"><strong>Active</strong></span>
-        <br> &#169; 2022 Muyideen Jimoh.<a href="https://github.com/MostafaOkasha/MostafaOkasha.github.io/blob/master/LICENSE" target="_blank"> MIT License</a>
+        <br> &#169; 2022 Muyideen Jimoh.<a href="https://github.com/JIMOHMA/jimohma.github.io" target="_blank"> MIT License</a>
         </p>
     </div>
 </footer>
