Removed / from beginning of src on line 192 of home-body

--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -189,7 +189,7 @@
 						<hr>
 						JavaScript; API; Image Processing; PhotoShop; Ecommerce
 					</div>
-					<img class="project-img-r" src="/images/blank.png" alt="" data-echo="images/projects/PhotoScript/PhotoScript.png">
+					<img class="project-img-r" src="images/blank.png" alt="" data-echo="images/projects/PhotoScript/PhotoScript.png">
 				</div>
 			</div>
 		</div>
