Removed / from beginning of src on mutiple line within home-body

--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -152,14 +152,14 @@
 							<hr>
 							CUDA; C Language; GPU, Memory Management, Scientific Computation
 						</div>
-						<img class="project-img-r" src="/img/blank.png" alt="" data-echo="images/projects/High-Res/High-Res.JPG">
+						<img class="project-img-r" src="img/blank.png" alt="" data-echo="images/projects/High-Res/High-Res.JPG">
 					</div>
 				</div>
 
 
 				<div class="project-r">
 					<div class="proj-header-body">
-						<img class="project-img-l" src="/images/blank.png" alt="" data-echo="images/projects/BackUpTimer/BackUpTimer2.PNG">
+						<img class="project-img-l" src="images/blank.png" alt="" data-echo="images/projects/BackUpTimer/BackUpTimer2.PNG">
 						<div class="project-body-r right-align">
 							Developed a "race-failure" algorithm feature that detects patterns corresponding to system failure within race logs,
 							which further utilizes Gmax API to obtain GPS times used to search, sort and filter
