Removed / from beginning of src

--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -140,7 +140,7 @@
 				<div class="project-l">
 					<div class="proj-header-body">
 						<div class="proj-header">
-							<img class="project-mainimage" src="/images/blank.png" alt="" data-echo="images/vr.png">
+							<img class="project-mainimage" src="images/blank.png" alt="" data-echo="images/vr.png">
 							<span class="project-title">HighRes</span>
 						</div>
 						<div class="project-body-l">
