Fixed minor typo on header-intro

--- a/_includes/header-intro.html
+++ b/_includes/header-intro.html
@@ -11,11 +11,11 @@ studying <span class="intro-emphasis"><a class="intro-link" href="https://www.en
 
 I'm currently a Developer and Senior Support Technician at <span class="intro-emphasis">
 <a class="intro-link" href="https://www.gmaxequine.com/" target="_blank">Gmax Technology Ltd</a>
-</span> where I develope Automation tools that are used daily for live race monitoring operations by Gmax employees both in Canada and UK. I was also a developer at 
+</span> where I develope Automation tools that are used daily for live race monitoring operations by Gmax employees both in Canada and UK. I am also a developer at 
 <span class="intro-emphasis"><a class="intro-link" href="https://timberleaco.com/" target="_blank">Timberlea Designs Inc</a>
 </span> where I developed automation tools used for 
 <span class="intro-emphasis"><a data-fancybox class="intro-link" href="https://www.youtube.com/watch?v=y7aQ7yfhMm0&t=9s" target="_blank">image-processing</a></span> 
-    of artworks and complex deisgn mockups witihn Adobe Photoshop environment!
+    of artworks and complex deisgn mockups within Adobe Photoshop environment!
 
 
 <!--
