Fixed dates on home-body

--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -12,7 +12,7 @@
 			      	<div class="wrapper2">
 						<img class="exp-img-container" src="/img/blank.png" alt="" data-echo="/images/Gmax.png" >
 						<div class="exp-container">
-							<div class="exp-text" data-text="Developer and Support Technician" date-text="Jan - Aug 2018"> @ Gmax Technology Ltd</div>
+							<div class="exp-text" data-text="Developer and Support Technician" date-text="Nov 2021 - Present"> @ Gmax Technology Ltd</div>
 							<ul class="exp-body">
 								<li>
 									Developed a Laser beam feature in <span style="color:#57CBFF">Python</span> that helped generate accurate race-time within <strong>seconds</strong> of a system failure, thereby reducing the investigation time by more than <strong>50%</strong>
@@ -34,9 +34,9 @@
 			    <li>
 			      <div class="time-div">
 			        <div class="wrapper2">
-						<img class="exp-img-container" src="img/blank.png" alt="" data-echo="/images/Timberlea.JPEG">
+						<img class="exp-img-container" src="img/blank.png" alt="" data-echo="images/Timberlea.JPEG">
 						<div class="exp-container">
-							<div class="exp-text" data-text="Software Developer" date-text="Aug - Dec 2017"> @ Timberlea Interiors</div>
+							<div class="exp-text" data-text="Software Developer" date-text="June 2022 - Present"> @ Timberlea Interiors</div>
 							<ul class="exp-body">
 								<li>
 									Designed and implemented custom software programs using <span style="color:#57CBFF">JavaScript</span> and <span style="color:#57CBFF">Photoshop API</span> to automate the <span style="color:#57CBFF">Image Processing</span> procedure involved in <strong>rendering</strong>ecommerce wallpaper designs
@@ -61,7 +61,7 @@
 			        <div class="wrapper2">
 						<img class="exp-img-container" src="/images/blank.png" alt="" data-echo="/images/Foresters.png">
 						<div class="exp-container">
-							<div class="exp-text" data-text="Content Migration Specialist" date-text="May - Aug 2017"> @ Foresters Financial</div>
+							<div class="exp-text" data-text="Content Migration Specialist" date-text="Feb 2020 - Sept 2020"> @ Foresters Financial</div>
 							<ul class="exp-body">
 								<li>
 									Responsible for <span style="color:#57CBFF">migrating web data files</span> from company's old system to a newly adopted system provided by Igloo Technology
