--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -61,7 +61,7 @@
 			        <div class="wrapper2">
 						<img class="exp-img-container" src="/images/blank.png" alt="" data-echo="/images/Foresters.png">
 						<div class="exp-container">
-							<div class="exp-text" data-text="Content Migration Specialist" date-text="Feb 2020 - Sept 2020"> @ Foresters Financial</div>
+							<div class="exp-text" data-text="Content Migration Specialist" date-text="Feb - Sept 2020"> @ Foresters Financial</div>
 							<ul class="exp-body">
 								<li>
 									Responsible for <span style="color:#57CBFF">migrating web data files</span> from company's old system to a newly adopted system provided by Igloo Technology
