--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -34,7 +34,7 @@
 			    <li>
 			      <div class="time-div">
 			        <div class="wrapper2">
-						<img class="exp-img-container" src="img/blank.png" alt="" data-echo="/images/Timberlea.JPEG">
+						<img class="exp-img-container" src="img/blank.png" alt="" data-echo="/images/Timberlea.jpeg">
 						<div class="exp-container">
 							<div class="exp-text" data-text="Software Developer" date-text="June 2022 - Present"> @ Timberlea Interiors</div>
 							<ul class="exp-body">
